--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     background: url(grand-canyon-sunset-1200x627.jpg) no-repeat;
     background-size: cover;
+    box-sizing: border-box;
 
 }
 
@@ -12,7 +13,7 @@ body{
     padding:40px;
     text-align:center ;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 6%;
     color: white;
     font-family: 'Century Gothic', sans-serif;
 }
@@ -40,12 +41,6 @@ body{
 
 }
 
-ul{
-    margin:0;
-    padding: 0;
-
-}
-
 .box li{
     display: inline-block;
     margin:6px;
@@ -64,4 +59,94 @@ ul{
 .box li a:hover
 {
     color: #b9b9b9;
+}
+
+.logo{
+    width: 100px;
+    background-color: gray;
+}
+
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+}
+
+.nav_links li {
+    display: inline-block;
+    padding: 0px 30px;
+
+}
+
+.nav_links {
+    list-style:none;
+    text-decoration: none;
+
+}
+
+.lks{
+    text-decoration: none;
+    font-size: 20px;
+    color: #4267B2;
+
+}
+
+button{
+    text-decoration: none;
+    background-color: transparent;
+    border-radius: 20px;
+    outline: none;
+    height: 45px;
+
+}
+
+
+header.container
+{
+    font-family: Raleway;
+	text-align: center;
+}
+
+header.container a
+{
+    color: #4267B2;
+    text-decoration: none;
+    font: 20px Raleway;
+    margin: 0px 10px;
+    padding: 10px 10px;
+    position: relative;
+    z-index: 0;
+    cursor: pointer;
+}
+
+header.topBotomBordersOut a:before, header.topBotomBordersOut a:after
+{
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    height: 2px;
+    background: #FFF;
+    content: "";
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+header.topBotomBordersOut a:before
+{
+    top: 0px;
+    transform: translateY(10px);
+}
+
+header.topBotomBordersOut a:after
+{
+    bottom: 0px;
+    transform: translateY(-10px);
+}
+
+header.topBotomBordersOut a:hover:before, header.topBotomBordersOut a:hover:after
+{
+    opacity: 1;
+    transform: translateY(0px);
 }
