--- a/main.css
+++ b/main.css
@@ -19,9 +19,9 @@ body{
 }
 
 .box-img{
-    width: 250px;
+    width: 220px;
     border-radius: 50%;
-    height: 150px;
+    height: 200px;
 }
 
 .box h1{
@@ -111,7 +111,7 @@ header.container
 
 header.container a
 {
-    color: #4267B2;
+    color: #344c7e;
     text-decoration: none;
     font: 20px Raleway;
     margin: 0px 10px;
